SERVER-65970 replSetFreeze does not handle large values for seconds